web/css/src/main.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
	html {
		scroll-padding-top: 4.5rem;
	}

	body {
		@apply bg-slate-900 text-neutral-100 font-sans;
		font-size: 1.2rem;
	}

	a {
		@apply text-sky-400 hover:underline;
	}

	.acp-crest {
		@apply drop-shadow-2xl text-sky-400;
	}

	.banner-header {
		font-size: max(4vw, 1.5rem);
		@apply font-bold ;
	}

	.nav-list button {
		@apply font-bold py-0.5 px-3 rounded bg-slate-600 m-1;
	}

	.nav-list a {
		@apply text-neutral-200;
	}
	
	.section-container {
		@apply container mx-auto p-2;
	}

	h1, h2, h3, h4 {
		@apply text-neutral-200;
	}

	h1 {
		@apply text-4xl;
	}

	h2 {
		@apply text-center text-3xl pb-1 mt-4 mb-2 font-semibold border-b-2 border-sky-500;
		/* border-indigo-600 */
	}

	h3 {
		@apply text-2xl mt-2;
	}

	h4 {
		@apply text-xl mt-2;
	}

	h5 {
		@apply font-semibold;
	}

	p {
		@apply text-justify;
	}
}

@layer components {
	.mouse {
		width: 25px;
		height: 45px;
		border: 3px solid;
		border-radius: 60px;
		position: relative;
		&::before {
			content: '';
			width: 6px;
			height: 6px;
			position: absolute;
			top: 5px;
			left: 50%;
			transform: translateX(-50%);
			background-color: rgb(14 165 233 / var(--tw-border-opacity));
			border-radius: 50%;
			opacity: 1;
			animation: wheel 2s infinite;
			-webkit-animation: wheel 2s infinite;
		}
		@apply border-sky-500;
	}

	@keyframes wheel {
		to {
			opacity: 0;
			top: 30px;
		}
	}

	@-webkit-keyframes wheel {
		to {
			opacity: 0;
			top: 30px;
		}
	}

	.comma-separated-list {
		display: inline;
		list-style: none;
	}

	.comma-separated-list li {
		display: inline;
	}

	.comma-separated-list li:after {
		content: ", ";
	}

	.comma-separated-list li:last-child:after {
		content: "";
	}

	.value-list li {
		@apply my-3;
	}

	.people-list {
		@apply flex flex-wrap place-content-center;
	}

	.people-list figure {
		@apply p-1 flex;
	}

	.people-list img {
		@apply h-20 w-20 grayscale-[90%] rounded-l-md;
		object-fit: cover;
	}

	.people-list figcaption {
		@apply bg-slate-700 p-2 w-56 text-xs rounded-r-md;
	}

	.people-header {
		@apply text-center w-full mt-2 mb-2 border-b border-slate-700;
	}
}

/* Toots */

.toots {
	/*max-width: 400px;*/
	list-style: none;
	padding: 0;
}

.toot {
	border-bottom: 1px solid #30304b;
	padding: 1rem;
	transition: 80ms;
}
.toot:hover {
	background-color: #1f1f2f;
}


/* Posting user. */
.toot .user {
	display: flex;
	flex-flow: column wrap;
	justify-content: center;
	align-content: flex-start;
	height: 46px;
	column-gap: 0.5rem;
	text-decoration: none;
	color: inherit;
}

.toot .avatar {
	border-radius: .5rem;
}

.toot .display-name {
	font-weight: bold;
	display: block;
}

.toot .user:hover .display-name {
	text-decoration: underline;
}

.username{
	color:#4e4e69;
}

/* Boosting user is smaller and above the posting user. */
.toot .boost {
	height: 23px;
	margin-bottom: 0.25rem;
	column-gap: 0.25rem;
}

.toot .boost:before {
	content: "♺";
	font-size: 140%;
}

.toot .boost .username {
	display: none;
}

.toot .permalink {
	text-decoration: none;
	color: #4e4e69;
	float: right;
}

.toot .permalink:hover {
	text-decoration: underline;
}

.toot .body {
	clear: both;
	margin-top: 1em;
}

.toot > .body > p {
	margin: 0;
}

.toot .body a {
	overflow-wrap: anywhere;
}

/* Weird trick to keep the text in the page but not display it. */
.toot .body .invisible {
	display: inline-block;
	font-size: 0;
	line-height: 0;
	width: 0;
	height: 0;
	position: absolute;
}

.toot .body .ellipsis::after {
	content: "…";
}

.toot .attachment {
	border-radius: 4px;
  display: flex;
  justify-content: center;
}

.toot .attachment img {
  width: 25%;
}

